[package]
name = "photo_flow"
version = "0.1.0"
edition = "2021"
authors = ["PhotoFlow Team"]
description = "A modern photo viewer with RAW support"

[dependencies]
# GUI framework
iced = { version = "0.10", features = ["image", "tokio"] }

# Image processing
image = "0.24"
rawloader = "0.37.1"  # Latest version for better RAW support
kamadak-exif = "0.6.1"  # Pure Rust EXIF reader
rfd = "0.12"  # Native file dialogs

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File operations
walkdir = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
